# pfabricate

./: README.md  environment.yml  setup.cfg
cluster/: bmrc_pfabricate.sh
scripts/: gen_submit.py  get_pf3k_samples.py  run_multiple_coi.py
slurm/: pfabricate-filter.slurm
src/pfabricate/: __init__.py  cli.py
src/pfabricate/filter/: command.py  main.py
src/pfabricate/mixed/: chromosomes.py  command.py  infection.py  main.py  meiosis.py  sequencing.py
src/pfabricate/util/: generic.py  ibd.py  plotting.py  process_vcfs.py
