[metadata]
name = pfabricate
description = Simulate P.f. mixed infections from a VCF
author = Jason A. Hendry
license = MIT
license_file = LICENSE
platforms = unix, linux, osx, cygwin, win32
classifiers  =
     Programming Language :: Python :: 3
	 Programming Language :: Python :: 3 :: Only
	 Programming Language :: Python :: 3.6
	 Programming Language :: Python :: 3.7
	 Programming Language :: Python :: 3.8
	 Programming Language :: Python :: 3.9

[options]
packages =
    pfabricate
install_requires =
	click
    pysam
	scipy
	seaborn
python_requires = >=3.6
package_dir =
    =src
zip_safe = nos

[options.entry_points]
console_scripts =
	pfabricate = pfabricate.cli:cli

[flake8]
max-line-length=88
